# DocUmark

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  NOTICE.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: security.yml
docs/: API.md  ARCHITECTURE.md  FORMATS.md  INSTALLATION.md  MCP-CONNECTOR.md  PNG-DATASETS.md  SECURITY-ARCHITECTURE.md  USAGE.md
src/documark/: __init__.py  bulk.py  cli.py  mcp_server.py  optimizer.py  organizer.py  png_encoder.py
src/documark/converters/: __init__.py  docx.py  html.py  pdf.py  txt.py
src/documark/security/: __init__.py  injection.py  quarantine.py  reporter.py  scanner.py
tests/: test_bulk.py  test_converters.py  test_optimizer.py  test_png_encoder.py  test_security.py
